feat: back to dashboard

--- a/buoi3/call-to-action.html
+++ b/buoi3/call-to-action.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="./form-global.css">
+
     <style>
         .btn-custom {
             background-color: black;
@@ -30,16 +32,6 @@
             color: hsl(221, 100%, 48%);
             transition-duration: 1s;
         }
-
-        #breadcrumb a {
-            text-decoration: none;
-        }
-
-        #breadcrumb a:hover {
-            text-decoration: underline;
-            color: red;
-            transition-duration: 1s;
-        }
     </style>
 </head>
 
@@ -51,6 +43,7 @@
             <li><a href="./form-access-manager.html">view form-access-manager</a></li>
             <li><a href="./contact-map.html">view contact-map</a></li>
             <li><a href="./call-to-action.html" style="color: red; text-decoration: underline;">view call-to-action</a></li>
+            <li style="padding: 10px; border-radius: 20px;"><a href="../index.html">Back to dashboard</a></li>
         </ul>
     </section>
 
