--- a/buoi3/contact-map.html
+++ b/buoi3/contact-map.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="./form-global.css">
+
+
     <style>
         .nav-child-click {
             padding: 10px 30px;
@@ -28,16 +31,6 @@
         .nav-child-default:last-child {
             border-right: 1px solid hsl(43.15deg 35.74% 51.18%);
         }
-
-        #breadcrumb a {
-            text-decoration: none;
-        }
-
-        #breadcrumb a:hover {
-            text-decoration: underline;
-            color: red;
-            transition-duration: 1s;
-        }
     </style>
 </head>
 
@@ -49,6 +42,7 @@
             <li><a href="./form-access-manager.html">view form-access-manager</a></li>
             <li><a href="./contact-map.html" style="color: red; text-decoration: underline;">view contact-map</a></li>
             <li><a href="./call-to-action.html">view call-to-action</a></li>
+            <li style="padding: 10px; border-radius: 20px;"><a href="../index.html">Back to dashboard</a></li>
         </ul>
     </section>
 
