--- a/buoi3/form-access-manager.html
+++ b/buoi3/form-access-manager.html
@@ -6,17 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <style>
-        #breadcrumb a {
-            text-decoration: none;
-        }
+    <link rel="stylesheet" href="./form-global.css">
 
-        #breadcrumb a:hover {
-            text-decoration: underline;
-            color: red;
-            transition-duration: 1s;
-        }
-    </style>
 </head>
 
 <body>
@@ -27,6 +18,7 @@
             <li><a href="./form-access-manager.html" style="color: red; text-decoration: underline;">view form-access-manager</a></li>
             <li><a href="./contact-map.html">view contact-map</a></li>
             <li><a href="./call-to-action.html">view call-to-action</a></li>
+            <li style="padding: 10px; border-radius: 20px;"><a href="../index.html">Back to dashboard</a></li>
         </ul>
     </section>
 
