--- a/buoi3/customer-review.html
+++ b/buoi3/customer-review.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./form-global.css">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -47,21 +48,7 @@
             color: #939393;
             margin-bottom: 10px;
         }
-
-        #breadcrumb a {
-            text-decoration: none;
-        }
-
-        #breadcrumb a:hover {
-            text-decoration: underline;
-            color: red;
-            transition-duration: 1s;
-        }
-
-        /* RESET CSS */
-        p {
-            margin: 0;
-        }
+        
     </style>
 </head>
 
@@ -75,6 +62,7 @@
                     form-access-manager</a></li>
             <li><a href="./contact-map.html">view contact-map</a></li>
             <li><a href="./call-to-action.html">view call-to-action</a></li>
+            <li style="padding: 10px; border-radius: 20px;"><a href="../index.html">Back to dashboard</a></li>
         </ul>
     </section>
 
