--- a/buoi3/form-contact.html
+++ b/buoi3/form-contact.html
@@ -13,18 +13,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <style>
-        #breadcrumb a {
-            text-decoration: none;
-        }
-
-        #breadcrumb a:hover {
-            text-decoration: underline;
-            color: red;
-            transition-duration: 1s;
-        }
-    </style>
 </head>
 
 <body>
@@ -35,6 +23,7 @@
             <li><a href="./form-access-manager.html">view form-access-manager</a></li>
             <li><a href="./contact-map.html">view contact-map</a></li>
             <li><a href="./call-to-action.html">view call-to-action</a></li>
+            <li style="padding: 10px; border-radius: 20px;"><a href="../index.html">Back to dashboard</a></li>
         </ul>
     </section>
 
