--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
     <a href="./buoi3/form-contact.html">
         bai 3
     </a>
+
+    <h1>Lesson4</h1>
+    <a href="./buoi4/form.html">
+        bai 4.1
+    </a>
+    <a href="./buoi4/booking-table.html">
+        bai 4.2
+    </a>
 </body>
 </html>
