--- a/buoi4/form.html
+++ b/buoi4/form.html
@@ -50,6 +50,7 @@
             class="email-submit"
             type="text" 
             placeholder="Email address" 
+            autofocus
             style="
                 padding: 10px;
                 border-radius: 5px; 
@@ -71,6 +72,9 @@
             send me opportunities
         </button>
     </section>
+    <div style="margin-top: 20px; margin-left: 20px;">
+        <a href="../index.html" style="color: black;">Back to dashboard</a>
+    </div>
 </body>
 
 </html>
