--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Lesson3</h1>
     <a href="./buoi3/form-contact.html">
@@ -12,11 +14,14 @@
     </a>
 
     <h1>Lesson4</h1>
-    <a href="./buoi4/form.html">
-        bai 4.1
-    </a>
-    <a href="./buoi4/booking-table.html">
-        bai 4.2
-    </a>
+    <div style="display: flex; flex-direction: column; gap: 10px;">
+        <a href="./buoi4/form.html">
+            bai 4.1
+        </a>
+        <a href="./buoi4/booking-table.html">
+            bai 4.2
+        </a>
+    </div>
 </body>
+
 </html>
