feat: lesson4 best seller laypout

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <a href="./buoi4/booking-table.html">
             bai 4.2
         </a>
+        <a href="./buoi4/best-seller.html">
+            bai 4.3
+        </a>
     </div>
 </body>
 
