--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
             bai 4.3
         </a>
     </div>
+
+    <h1>Lesson6</h1>
+    <div style="display: flex; flex-direction: column; gap: 10px;">
+        <a href="./buoi6/menu-dropdown.html">
+            bai 6.1
+        </a>
+        <a href="./buoi6/service-layout.html">
+            bai 6.2
+        </a>
+        <a href="./buoi6/form-login.html">
+            bai 6.3
+        </a>
+    </div>
 </body>
 
 </html>
