--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
             bai 6.3
         </a>
     </div>
+
+    <h1>Lesson9</h1>
+    <div style="display: flex; flex-direction: column; gap: 10px;">
+        <a href="buoi9/pages/lesson1.html">
+            bai 9.1
+        </a>
+    </div>
+
 </body>
 
 </html>
